--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "enum-switch",
   "displayName": "enum-switch",
   "description": "turn enums into beautiful switch statements",
+  "publisher": "Philipp Rost",
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.82.0"
